[gd_scene load_steps=18 format=3 uid="uid://dne1jsbdsgoy5"]

[ext_resource type="Script" uid="uid://bjid16w186btg" path="res://Scene/forgot_password_overlay.gd" id="1_37kpt"]
[ext_resource type="Texture2D" uid="uid://bhllo6w3l1c5t" path="res://Image/NoButtonDark.jpg" id="2_37kpt"]
[ext_resource type="FontFile" uid="uid://b4fk7byahwpv7" path="res://Image/PxPlus_IBM_VGA_8x16.ttf" id="3_3p8s1"]
[ext_resource type="Texture2D" uid="uid://b1xlgrki8vbac" path="res://Image/NoButtonLight.jpg" id="3_vdjmw"]
[ext_resource type="Texture2D" uid="uid://cwntcsfwwnppn" path="res://Image/YesButtonLight.jpg" id="4_ebmh8"]
[ext_resource type="Texture2D" uid="uid://domkiyanf3v4q" path="res://Image/YesButtonDark.jpg" id="5_ei5g3"]
[ext_resource type="Texture2D" uid="uid://vfomiumvgu6r" path="res://Image/719702109f9613c84a87.jpg" id="7_ebmh8"]
[ext_resource type="Texture2D" uid="uid://drvgfuj2dtkiv" path="res://Image/sg-11134202-7rdws-lzx9r8oh9dzad6-removebg-preview.png" id="7_vxtri"]
[ext_resource type="Texture2D" uid="uid://cqe3u3kt3dct3" path="res://Image/1cff648a-528a-4aaf-8de6-a94f0e5d4aea.jpg" id="8_ei5g3"]
[ext_resource type="Texture2D" uid="uid://icn2th1cjdyl" path="res://Image/Sprite-0007.png" id="9_3p8s1"]
[ext_resource type="AudioStream" uid="uid://buhlnskns6qu2" path="res://sfx/poem_sfx.mp3" id="10_8uuc1"]
[ext_resource type="Script" uid="uid://tjxwfqm2cvr" path="res://Scene/no_button_2.gd" id="11_8i23c"]
[ext_resource type="AudioStream" uid="uid://dsyk5qmep575m" path="res://sfx/creepy clicking sound - J1 Justin 2 (mp3cut.net) (2).mp3" id="11_8uuc1"]
[ext_resource type="Shader" uid="uid://bi5go0bsg5hax" path="res://Scene/forgot_password_overlay.gdshader" id="13_1catp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3p8s1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8uuc1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1catp"]
shader = ExtResource("13_1catp")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.2
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[node name="ForgotPasswordOverlay" type="CanvasLayer"]
script = ExtResource("1_37kpt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -281.0
offset_top = -163.0
offset_right = -281.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="YesButton" type="TextureButton" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = 40.0
offset_right = 640.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ebmh8")
texture_pressed = ExtResource("5_ei5g3")
texture_hover = ExtResource("5_ei5g3")

[node name="NoButton" type="TextureButton" parent="TextureRect"]
visible = false
layout_mode = 0
offset_top = 577.0
offset_right = 1280.0
offset_bottom = 707.0
texture_normal = ExtResource("2_37kpt")
texture_pressed = ExtResource("3_vdjmw")
texture_hover = ExtResource("3_vdjmw")

[node name="QuestionLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_right = 1282.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_3p8s1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WomanPicture" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 469.0
offset_top = 41.0
offset_right = 619.0
offset_bottom = 191.0
scale = Vector2(2, 2)
texture = ExtResource("7_ebmh8")

[node name="ManPicture" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 496.0
offset_top = 38.0
offset_right = 1499.0
offset_bottom = 1318.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_ei5g3")

[node name="Mask" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = -32.0
offset_top = 32.0
offset_right = 768.0
offset_bottom = 832.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_vxtri")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.5
offset_top = -60.5
offset_right = 291.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
mouse_filter = 2
texture = ExtResource("9_3p8s1")

[node name="AnswerField" type="LineEdit" parent="TextureRect"]
visible = false
modulate = Color(1, 1, 1, 0.772549)
self_modulate = Color(1, 1, 1, 0.737255)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -53.0
offset_right = 326.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_3p8s1")
flat = true

[node name="PhoneNum" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_top = 103.0
offset_right = 1282.0
offset_bottom = 203.0
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 99
text = "*******028"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AdressHome" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 126.0
offset_top = 53.0
offset_right = 1408.0
offset_bottom = 382.0
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 80
text = "Room 302, Sakura Heights,
14-22 Kabukich≈ç 3-chome,
Shinjuku, Tokyo 162-8479,
Japan"
vertical_alignment = 1

[node name="Howlongyouhiding" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_top = 103.0
offset_right = 1282.0
offset_bottom = 203.0
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 99
text = "How long have you
 been hiding for?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Howlongyouhiding2" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = -31.0
offset_top = 85.0
offset_right = 1251.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 50
text = "You think you 
can get away with this?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoButton2" type="TextureButton" parent="TextureRect"]
visible = false
layout_mode = 0
offset_top = 400.0
offset_right = 1280.0
offset_bottom = 530.0
texture_normal = ExtResource("2_37kpt")
texture_pressed = ExtResource("3_vdjmw")
texture_hover = ExtResource("3_vdjmw")
script = ExtResource("11_8i23c")

[node name="NoButton3" type="TextureButton" parent="TextureRect"]
visible = false
layout_mode = 0
offset_top = 225.0
offset_right = 1280.0
offset_bottom = 355.0
texture_normal = ExtResource("2_37kpt")
texture_pressed = ExtResource("3_vdjmw")
texture_hover = ExtResource("3_vdjmw")
script = ExtResource("11_8i23c")

[node name="YesButton2" type="TextureButton" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = 217.0
offset_right = 640.0
offset_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ebmh8")
texture_pressed = ExtResource("5_ei5g3")
texture_hover = ExtResource("5_ei5g3")
script = ExtResource("11_8i23c")

[node name="YesButton3" type="TextureButton" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = 40.0
offset_right = 640.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ebmh8")
texture_pressed = ExtResource("5_ei5g3")
texture_hover = ExtResource("5_ei5g3")
script = ExtResource("11_8i23c")

[node name="ResultPanel" type="ColorRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="TextureRect/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -41.5
offset_right = 200.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 40
text = "Username: Kenta_ito222
Password: kenta.123"

[node name="CloseButton" type="Button" parent="TextureRect/ResultPanel"]
layout_mode = 0
offset_left = 1221.0
offset_top = 13.0
offset_right = 1261.0
offset_bottom = 53.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_8uuc1")
text = "x"
flat = true

[node name="Label2" type="Label" parent="TextureRect/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -160.0
offset_right = 450.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_3p8s1")
theme_override_font_sizes/font_size = 40
text = "Your identity has been successfully verified."

[node name="poem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8uuc1")
parameters/looping = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_8uuc1")
volume_db = 4.333

[node name="CTROverlay" type="CanvasLayer" parent="."]
layer = 22
visible = false

[node name="ColorRect" type="ColorRect" parent="CTROverlay"]
material = SubResource("ShaderMaterial_1catp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="TextureRect/YesButton2" to="." method="_on_yes_button_2_pressed"]
[connection signal="pressed" from="TextureRect/YesButton3" to="." method="_on_yes_button_2_pressed"]
